--- a/templates/chat/attack-roll-card.html
+++ b/templates/chat/attack-roll-card.html
@@ -1,7 +1,5 @@
 <form class="roll-card attack-roll-card">
-  <div class="card-title">
-    {{localize weaponTypeKey}} {{localize 'PB.Attack'}}
-  </div>
+  <div class="card-title">{{localize weaponTypeKey}} {{localize "PB.Attack"}}</div>
   {{#each items as |item id|}}
   <div class="item-row">
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
@@ -13,10 +11,7 @@
   </div>
   <div class="attack-roll">
     <div class="roll-title">
-      <span
-        >{{localize 'PB.Attack'}}: {{attackFormula}} {{localize 'PB.Vs'}}
-        {{localize 'PB.DR'}} {{attackDR}}</span
-      >
+      <span>{{localize "PB.Attack"}}: {{attackFormula}} {{localize "PB.Vs"}} {{localize "PB.DR"}} {{attackDR}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal attackRoll}}</span>
@@ -29,7 +24,7 @@
   {{/if}} {{#if damageRoll}}
   <div class="damage-roll">
     <div class="roll-title">
-      <span>{{localize 'PB.Damage'}}: {{damageRoll._formula}}</span>
+      <span>{{localize "PB.Damage"}}: {{damageRoll._formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal damageRoll}}</span>
@@ -38,7 +33,7 @@
   {{/if}} {{#if targetArmorRoll}}
   <div class="target-armor-roll">
     <div class="roll-title">
-      <span>{{localize 'PB.TargetArmor'}}: {{targetArmorRoll.formula}}</span>
+      <span>{{localize "PB.TargetArmor"}}: {{targetArmorRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal targetArmorRoll}}</span>
