--- a/templates/chat/individual-initiative-roll-card.html
+++ b/templates/chat/individual-initiative-roll-card.html
@@ -1,8 +1,8 @@
 <form class="roll-card morale-roll-card">
-  <div class="card-title">{{localize 'PB.Initiative'}}</div>
+  <div class="card-title">{{localize "PB.Initiative"}}</div>
   <div class="initiative-roll">
     <div class="roll-title">
-      <span>{{localize 'PB.Initiative'}}: {{initiativeRoll.formula}}</span>
+      <span>{{localize "PB.Initiative"}}: {{initiativeRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal initiativeRoll}}</span>
