--- a/templates/dialog/add-item-dialog.html
+++ b/templates/dialog/add-item-dialog.html
@@ -1,24 +1,18 @@
 <form class="custom-dialog">
   <div class="form-group">
-    <label>{{localize 'PB.Name'}}:</label>
-    <input
-      type="text"
-      name="itemname"
-      value=""
-      placeholder="{{localize 'PB.Name'}}"
-      data-dtype="String"
-    />
+    <label>{{localize "PB.Name"}}:</label>
+    <input type="text" name="itemname" value="" placeholder="{{localize 'PB.Name'}}" data-dtype="String" />
   </div>
   <div class="form-group">
-    <label>{{localize 'PB.Type'}}:</label>
+    <label>{{localize "PB.Type"}}:</label>
     <br />
     <select name="itemtype" class="add-type">
-      <option value="armor">{{localize 'PB.ItemTypeArmor'}}</option>
-      <option value="container">{{localize 'PB.ItemTypeContainer'}}</option>
-      <option value="misc" selected>{{localize 'PB.ItemTypeMisc'}}</option>
-      <option value="invokable">{{localize 'PB.ItemTypeInvokable'}}</option>
-      <option value="hat">{{localize 'PB.ItemTypeHat'}}</option>
-      <option value="weapon">{{localize 'PB.ItemTypeWeapon'}}</option>
+      <option value="armor">{{localize "PB.ItemTypeArmor"}}</option>
+      <option value="container">{{localize "PB.ItemTypeContainer"}}</option>
+      <option value="misc" selected>{{localize "PB.ItemTypeMisc"}}</option>
+      <option value="invokable">{{localize "PB.ItemTypeInvokable"}}</option>
+      <option value="hat">{{localize "PB.ItemTypeHat"}}</option>
+      <option value="weapon">{{localize "PB.ItemTypeWeapon"}}</option>
     </select>
   </div>
 </form>
