--- a/templates/item/invokable-sheet.html
+++ b/templates/item/invokable-sheet.html
@@ -1,20 +1,10 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-  {{!-- Sheet Header --}}
+  {{! Sheet Header }}
   <header class="sheet-header flexrow">
-    <img
-      class="profile-img"
-      src="{{item.img}}"
-      title="{{item.name}}"
-      data-edit="img"
-    />
+    <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
     <div class="header-details">
       <h1 class="item-name">
-        <input
-          name="name"
-          type="text"
-          value="{{item.name}}"
-          placeholder="{{ localize 'PB.ItemName' }}"
-        />
+        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </h1>
       <div class="item-subtitle">
         <h4 class="item-type">{{item.type}}</h4>
@@ -22,130 +12,73 @@
     </div>
   </header>
 
-  {{!-- Sheet Tab Navigation --}}
+  {{! Sheet Tab Navigation }}
   <nav class="sheet-tabs tabs" data-group="primary">
     <span class="spacer"></span>
-    <a class="item" data-tab="description"
-      >{{ localize "PB.TabDescription" }}</a
-    >
-    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
+    <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
+    <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
     <span class="spacer"></span>
   </nav>
 
-  {{!-- Sheet Body --}}
+  {{! Sheet Body }}
   <section class="sheet-body">
-    {{!-- Description Tab --}}
+    {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
+      {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
     </div>
 
-    {{!-- Details Tab --}}
+    {{! Details Tab }}
     <div class="tab" data-group="primary" data-tab="details">
-      {{!-- Price --}}
+      {{! Price }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemPrice" }}:</label>
-        <input
-          type="text"
-          name="data.price"
-          value="{{data.data.price}}"
-          placeholder="2"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.ItemPrice"}}:</label>
+        <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
       </div>
 
-      {{!-- Carry weight --}}
+      {{! Carry weight }}
       <div class="form-group">
-        <label>{{ localize "PB.CarryWeight" }}:</label>
-        <input
-          type="text"
-          name="data.carryWeight"
-          value="{{data.data.carryWeight}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.CarryWeight"}}:</label>
+        <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
       </div>
 
       <div class="form-group">
-        <label>{{ localize "PB.Quantity" }}:</label>
-        <input
-          type="text"
-          name="data.quantity"
-          value="{{data.data.quantity}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.Quantity"}}:</label>
+        <input type="text" name="data.quantity" value="{{data.data.quantity}}" placeholder="1" data-dtype="Number" />
       </div>
 
       <div class="form-group">
-        <label>{{ localize "PB.MaxQuantity" }}:</label>
-        <input
-          type="text"
-          name="data.maxQuantity"
-          value="{{data.data.maxQuantity}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.MaxQuantity"}}:</label>
+        <input type="text" name="data.maxQuantity" value="{{data.data.maxQuantity}}" placeholder="1" data-dtype="Number" />
       </div>
 
-      {{!-- Container space --}}
+      {{! Container space }}
       <div class="form-group">
-        <label>{{ localize "PB.ContainerSpace" }}:</label>
-        <input
-          type="text"
-          name="data.containerSpace"
-          value="{{data.data.containerSpace}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.ContainerSpace"}}:</label>
+        <input type="text" name="data.containerSpace" value="{{data.data.containerSpace}}" placeholder="1" data-dtype="Number" />
       </div>
 
-      {{!-- Invokable type --}}
+      {{! Invokable type }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemInvokableType" }}:</label>
-        <input
-          type="text"
-          name="data.invokableType"
-          value="{{data.data.invokableType}}"
-          placeholder="Arcane Ritual|Ancient Relic"
-          data-dtype="String"
-        />
+        <label>{{localize "PB.ItemInvokableType"}}:</label>
+        <input type="text" name="data.invokableType" value="{{data.data.invokableType}}" placeholder="Arcane Ritual|Ancient Relic" data-dtype="String" />
       </div>
 
-      {{!-- Uses ammo --}}
+      {{! Uses ammo }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemIsEquipment" }}:</label>
-        <input
-          type="checkbox"
-          name="data.isEquipment"
-          {{checked
-          data.data.isEquipment}}
-          data-dtype="Boolean"
-        />
+        <label>{{localize "PB.ItemIsEquipment"}}:</label>
+        <input type="checkbox" name="data.isEquipment" {{checked data.data.isEquipment}} data-dtype="Boolean" />
       </div>
 
-      {{!-- Action Macro --}}
+      {{! Action Macro }}
       <div class="form-group">
-        <label>{{ localize "PB.actionMacro" }}:</label>
-        <input
-          type="text"
-          name="data.actionMacro"
-          value="{{data.data.actionMacro}}"
-          placeholder="compendium;macro"
-          data-dtype="String"
-        />
+        <label>{{localize "PB.actionMacro"}}:</label>
+        <input type="text" name="data.actionMacro" value="{{data.data.actionMacro}}" placeholder="compendium;macro" data-dtype="String" />
       </div>
 
-      {{!-- Action Macro Label --}}
+      {{! Action Macro Label }}
       <div class="form-group">
-        <label>{{ localize "PB.actionMacroLabel" }}:</label>
-        <input
-          type="text"
-          name="data.actionMacroLabel"
-          value="{{data.data.actionMacroLabel}}"
-          placeholder="Use"
-          data-dtype="String"
-        />
+        <label>{{localize "PB.actionMacroLabel"}}:</label>
+        <input type="text" name="data.actionMacroLabel" value="{{data.data.actionMacroLabel}}" placeholder="Use" data-dtype="String" />
       </div>
     </div>
   </section>
