--- a/scss/skins/mb/skin.min.scss
+++ b/scss/skins/mb/skin.min.scss
@@ -117,19 +117,12 @@ button::-moz-focus-inner {
 .tox .accessibility-issue__repair {
   margin-top: 16px;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--info
-  .accessibility-issue__description {
+.tox .tox-dialog__body-content .accessibility-issue--info .accessibility-issue__description {
   background-color: rgba(255, 232, 0, 0.5);
   border-color: #ffe800;
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--info
-  .accessibility-issue__description
-  > :last-child {
+.tox .tox-dialog__body-content .accessibility-issue--info .accessibility-issue__description > :last-child {
   border-color: #ffe800;
 }
 .tox .tox-dialog__body-content .accessibility-issue--info .tox-form__group h2 {
@@ -141,19 +134,12 @@ button::-moz-focus-inner {
 .tox .tox-dialog__body-content .accessibility-issue--info a .tox-icon {
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--warn
-  .accessibility-issue__description {
+.tox .tox-dialog__body-content .accessibility-issue--warn .accessibility-issue__description {
   background-color: rgba(255, 165, 0, 0.5);
   border-color: rgba(255, 165, 0, 0.8);
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--warn
-  .accessibility-issue__description
-  > :last-child {
+.tox .tox-dialog__body-content .accessibility-issue--warn .accessibility-issue__description > :last-child {
   border-color: rgba(255, 165, 0, 0.8);
 }
 .tox .tox-dialog__body-content .accessibility-issue--warn .tox-form__group h2 {
@@ -165,19 +151,12 @@ button::-moz-focus-inner {
 .tox .tox-dialog__body-content .accessibility-issue--warn a .tox-icon {
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--error
-  .accessibility-issue__description {
+.tox .tox-dialog__body-content .accessibility-issue--error .accessibility-issue__description {
   background-color: rgba(218, 0, 0, 0.5);
   border-color: rgba(218, 0, 0, 0.8);
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--error
-  .accessibility-issue__description
-  > :last-child {
+.tox .tox-dialog__body-content .accessibility-issue--error .accessibility-issue__description > :last-child {
   border-color: rgba(218, 0, 0, 0.8);
 }
 .tox .tox-dialog__body-content .accessibility-issue--error .tox-form__group h2 {
@@ -189,26 +168,15 @@ button::-moz-focus-inner {
 .tox .tox-dialog__body-content .accessibility-issue--error a .tox-icon {
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--success
-  .accessibility-issue__description {
+.tox .tox-dialog__body-content .accessibility-issue--success .accessibility-issue__description {
   background-color: rgba(255, 232, 0, 0.5);
   border-color: rgba(255, 232, 0, 0.8);
   color: #fff;
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--success
-  .accessibility-issue__description
-  > :last-child {
+.tox .tox-dialog__body-content .accessibility-issue--success .accessibility-issue__description > :last-child {
   border-color: rgba(255, 232, 0, 0.8);
 }
-.tox
-  .tox-dialog__body-content
-  .accessibility-issue--success
-  .tox-form__group
-  h2 {
+.tox .tox-dialog__body-content .accessibility-issue--success .tox-form__group h2 {
   color: #fff;
 }
 .tox .tox-dialog__body-content .accessibility-issue--success .tox-icon svg {
@@ -218,56 +186,32 @@ button::-moz-focus-inner {
   color: #fff;
 }
 .tox .tox-dialog__body-content .accessibility-issue__header h1,
-.tox
-  .tox-dialog__body-content
-  .tox-form__group
-  .accessibility-issue__description
-  h2 {
+.tox .tox-dialog__body-content .tox-form__group .accessibility-issue__description h2 {
   margin-top: 0;
 }
-.tox:not([dir="rtl"])
-  .tox-dialog__body-content
-  .accessibility-issue__header
-  .tox-button {
+.tox:not([dir="rtl"]) .tox-dialog__body-content .accessibility-issue__header .tox-button {
   margin-left: 4px;
 }
-.tox:not([dir="rtl"])
-  .tox-dialog__body-content
-  .accessibility-issue__header
-  > :nth-last-child(2) {
+.tox:not([dir="rtl"]) .tox-dialog__body-content .accessibility-issue__header > :nth-last-child(2) {
   margin-left: auto;
 }
-.tox:not([dir="rtl"])
-  .tox-dialog__body-content
-  .accessibility-issue__description {
+.tox:not([dir="rtl"]) .tox-dialog__body-content .accessibility-issue__description {
   padding: 4px 4px 4px 8px;
 }
-.tox:not([dir="rtl"])
-  .tox-dialog__body-content
-  .accessibility-issue__description
-  > :last-child {
+.tox:not([dir="rtl"]) .tox-dialog__body-content .accessibility-issue__description > :last-child {
   border-left-width: 1px;
   padding-left: 4px;
 }
-.tox[dir="rtl"]
-  .tox-dialog__body-content
-  .accessibility-issue__header
-  .tox-button {
+.tox[dir="rtl"] .tox-dialog__body-content .accessibility-issue__header .tox-button {
   margin-right: 4px;
 }
-.tox[dir="rtl"]
-  .tox-dialog__body-content
-  .accessibility-issue__header
-  > :nth-last-child(2) {
+.tox[dir="rtl"] .tox-dialog__body-content .accessibility-issue__header > :nth-last-child(2) {
   margin-right: auto;
 }
 .tox[dir="rtl"] .tox-dialog__body-content .accessibility-issue__description {
   padding: 4px 8px 4px 4px;
 }
-.tox[dir="rtl"]
-  .tox-dialog__body-content
-  .accessibility-issue__description
-  > :last-child {
+.tox[dir="rtl"] .tox-dialog__body-content .accessibility-issue__description > :last-child {
   border-right-width: 1px;
   padding-right: 4px;
 }
@@ -490,53 +434,25 @@ button::-moz-focus-inner {
   color: rgba(255, 255, 255, 0.5);
   cursor: not-allowed;
 }
-.tox
-  .tox-checkbox--disabled
-  .tox-checkbox__icons
-  .tox-checkbox-icon__checked
-  svg {
+.tox .tox-checkbox--disabled .tox-checkbox__icons .tox-checkbox-icon__checked svg {
   fill: rgba(255, 255, 255, 0.5);
 }
-.tox
-  .tox-checkbox--disabled
-  .tox-checkbox__icons
-  .tox-checkbox-icon__unchecked
-  svg {
+.tox .tox-checkbox--disabled .tox-checkbox__icons .tox-checkbox-icon__unchecked svg {
   fill: rgba(255, 255, 255, 0.5);
 }
-.tox
-  .tox-checkbox--disabled
-  .tox-checkbox__icons
-  .tox-checkbox-icon__indeterminate
-  svg {
+.tox .tox-checkbox--disabled .tox-checkbox__icons .tox-checkbox-icon__indeterminate svg {
   fill: rgba(255, 255, 255, 0.5);
 }
-.tox
-  input.tox-checkbox__input:checked
-  + .tox-checkbox__icons
-  .tox-checkbox-icon__unchecked
-  svg {
+.tox input.tox-checkbox__input:checked + .tox-checkbox__icons .tox-checkbox-icon__unchecked svg {
   display: none;
 }
-.tox
-  input.tox-checkbox__input:checked
-  + .tox-checkbox__icons
-  .tox-checkbox-icon__checked
-  svg {
+.tox input.tox-checkbox__input:checked + .tox-checkbox__icons .tox-checkbox-icon__checked svg {
   display: block;
 }
-.tox
-  input.tox-checkbox__input:indeterminate
-  + .tox-checkbox__icons
-  .tox-checkbox-icon__unchecked
-  svg {
+.tox input.tox-checkbox__input:indeterminate + .tox-checkbox__icons .tox-checkbox-icon__unchecked svg {
   display: none;
 }
-.tox
-  input.tox-checkbox__input:indeterminate
-  + .tox-checkbox__icons
-  .tox-checkbox-icon__indeterminate
-  svg {
+.tox input.tox-checkbox__input:indeterminate + .tox-checkbox__icons .tox-checkbox-icon__indeterminate svg {
   display: block;
 }
 .tox input.tox-checkbox__input:focus + .tox-checkbox__icons {
@@ -643,20 +559,14 @@ button::-moz-focus-inner {
   background-color: #ffe800;
   color: #000;
 }
-.tox
-  .tox-collection--grid
-  .tox-collection__item--active:not(.tox-collection__item--state-disabled) {
+.tox .tox-collection--grid .tox-collection__item--active:not(.tox-collection__item--state-disabled) {
   background-color: #ffe800;
   color: #000;
 }
-.tox
-  .tox-collection--list
-  .tox-collection__item--active:not(.tox-collection__item--state-disabled) {
+.tox .tox-collection--list .tox-collection__item--active:not(.tox-collection__item--state-disabled) {
   color: #000;
 }
-.tox
-  .tox-collection--toolbar
-  .tox-collection__item--active:not(.tox-collection__item--state-disabled) {
+.tox .tox-collection--toolbar .tox-collection__item--active:not(.tox-collection__item--state-disabled) {
   color: #000;
 }
 .tox .tox-collection__item--state-disabled {
@@ -713,18 +623,10 @@ button::-moz-focus-inner {
 .tox .tox-collection__item-caret svg {
   fill: #fff;
 }
-.tox
-  .tox-collection--list
-  .tox-collection__item:not(.tox-collection__item--enabled)
-  .tox-collection__item-checkmark
-  svg {
+.tox .tox-collection--list .tox-collection__item:not(.tox-collection__item--enabled) .tox-collection__item-checkmark svg {
   display: none;
 }
-.tox
-  .tox-collection--list
-  .tox-collection__item:not(.tox-collection__item--enabled)
-  .tox-collection__item-accessory
-  + .tox-collection__item-checkmark {
+.tox .tox-collection--list .tox-collection__item:not(.tox-collection__item--enabled) .tox-collection__item-accessory + .tox-collection__item-checkmark {
   display: none;
 }
 .tox .tox-collection--horizontal {
@@ -766,26 +668,21 @@ button::-moz-focus-inner {
   flex: 1 1 auto;
   flex-direction: row;
 }
-.tox
-  .tox-collection__item-container--row.tox-collection__item-container--align-left {
+.tox .tox-collection__item-container--row.tox-collection__item-container--align-left {
   margin-right: auto;
 }
-.tox
-  .tox-collection__item-container--row.tox-collection__item-container--align-right {
+.tox .tox-collection__item-container--row.tox-collection__item-container--align-right {
   justify-content: flex-end;
   margin-left: auto;
 }
-.tox
-  .tox-collection__item-container--row.tox-collection__item-container--valign-top {
+.tox .tox-collection__item-container--row.tox-collection__item-container--valign-top {
   align-items: flex-start;
   margin-bottom: auto;
 }
-.tox
-  .tox-collection__item-container--row.tox-collection__item-container--valign-middle {
+.tox .tox-collection__item-container--row.tox-collection__item-container--valign-middle {
   align-items: center;
 }
-.tox
-  .tox-collection__item-container--row.tox-collection__item-container--valign-bottom {
+.tox .tox-collection__item-container--row.tox-collection__item-container--valign-bottom {
   align-items: flex-end;
   margin-top: auto;
 }
@@ -795,42 +692,29 @@ button::-moz-focus-inner {
   flex: 1 1 auto;
   flex-direction: column;
 }
-.tox
-  .tox-collection__item-container--column.tox-collection__item-container--align-left {
+.tox .tox-collection__item-container--column.tox-collection__item-container--align-left {
   align-items: flex-start;
 }
-.tox
-  .tox-collection__item-container--column.tox-collection__item-container--align-right {
+.tox .tox-collection__item-container--column.tox-collection__item-container--align-right {
   align-items: flex-end;
 }
-.tox
-  .tox-collection__item-container--column.tox-collection__item-container--valign-top {
+.tox .tox-collection__item-container--column.tox-collection__item-container--valign-top {
   align-self: flex-start;
 }
-.tox
-  .tox-collection__item-container--column.tox-collection__item-container--valign-middle {
+.tox .tox-collection__item-container--column.tox-collection__item-container--valign-middle {
   -ms-grid-row-align: center;
   align-self: center;
 }
-.tox
-  .tox-collection__item-container--column.tox-collection__item-container--valign-bottom {
+.tox .tox-collection__item-container--column.tox-collection__item-container--valign-bottom {
   align-self: flex-end;
 }
-.tox:not([dir="rtl"])
-  .tox-collection--horizontal
-  .tox-collection__group:not(:last-of-type) {
+.tox:not([dir="rtl"]) .tox-collection--horizontal .tox-collection__group:not(:last-of-type) {
   border-right: 1px solid #ccc;
 }
-.tox:not([dir="rtl"])
-  .tox-collection--list
-  .tox-collection__item
-  > :not(:first-child) {
+.tox:not([dir="rtl"]) .tox-collection--list .tox-collection__item > :not(:first-child) {
   margin-left: 8px;
 }
-.tox:not([dir="rtl"])
-  .tox-collection--list
-  .tox-collection__item
-  > .tox-collection__item-label:first-child {
+.tox:not([dir="rtl"]) .tox-collection--list .tox-collection__item > .tox-collection__item-label:first-child {
   margin-left: 4px;
 }
 .tox:not([dir="rtl"]) .tox-collection__item-accessory {
@@ -840,21 +724,13 @@ button::-moz-focus-inner {
 .tox:not([dir="rtl"]) .tox-collection .tox-collection__item-caret {
   margin-left: 16px;
 }
-.tox[dir="rtl"]
-  .tox-collection--horizontal
-  .tox-collection__group:not(:last-of-type) {
+.tox[dir="rtl"] .tox-collection--horizontal .tox-collection__group:not(:last-of-type) {
   border-left: 1px solid #ccc;
 }
-.tox[dir="rtl"]
-  .tox-collection--list
-  .tox-collection__item
-  > :not(:first-child) {
+.tox[dir="rtl"] .tox-collection--list .tox-collection__item > :not(:first-child) {
   margin-right: 8px;
 }
-.tox[dir="rtl"]
-  .tox-collection--list
-  .tox-collection__item
-  > .tox-collection__item-label:first-child {
+.tox[dir="rtl"] .tox-collection--list .tox-collection__item > .tox-collection__item-label:first-child {
   margin-right: 4px;
 }
 .tox[dir="rtl"] .tox-collection__item-icon-rtl .tox-collection__item-icon svg {
@@ -911,22 +787,7 @@ button::-moz-focus-inner {
   width: 25px;
 }
 .tox .tox-hue-slider-spectrum {
-  background: linear-gradient(
-    to bottom,
-    red,
-    #ff0080,
-    #f0f,
-    #8000ff,
-    #00f,
-    #0080ff,
-    #0ff,
-    #00ff80,
-    #0f0,
-    #80ff00,
-    #ff0,
-    #ff8000,
-    red
-  );
+  background: linear-gradient(to bottom, red, #ff0080, #f0f, #8000ff, #00f, #0080ff, #0ff, #00ff80, #0f0, #80ff00, #ff0, #ff8000, red);
   height: 100%;
   width: 100%;
 }
@@ -1273,8 +1134,7 @@ button::-moz-focus-inner {
   border-radius: 3px;
   border-style: solid;
   border-width: 1px;
-  box-shadow: 0 16px 16px -10px rgba(0, 0, 0, 0.15),
-    0 0 40px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 16px 16px -10px rgba(0, 0, 0, 0.15), 0 0 40px 1px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: column;
   max-height: 100%;
@@ -1571,9 +1431,7 @@ button::-moz-focus-inner {
   }
 }
 @media only screen and (max-width: 767px) {
-  body:not(.tox-force-desktop)
-    .tox:not([dir="rtl"])
-    .tox-dialog__body-nav-item:not(:first-child) {
+  body:not(.tox-force-desktop) .tox:not([dir="rtl"]) .tox-dialog__body-nav-item:not(:first-child) {
     margin-left: 8px;
   }
 }
@@ -1590,9 +1448,7 @@ button::-moz-focus-inner {
   }
 }
 @media only screen and (max-width: 767px) {
-  body:not(.tox-force-desktop)
-    .tox[dir="rtl"]
-    .tox-dialog__body-nav-item:not(:first-child) {
+  body:not(.tox-force-desktop) .tox[dir="rtl"] .tox-dialog__body-nav-item:not(:first-child) {
     margin-right: 8px;
   }
 }
@@ -1682,15 +1538,9 @@ body.tox-dialog__disable-scroll {
   flex: 1;
   position: relative;
 }
-.tox
-  .tox-control-wrap:not(.tox-control-wrap--status-invalid)
-  .tox-control-wrap__status-icon-invalid,
-.tox
-  .tox-control-wrap:not(.tox-control-wrap--status-unknown)
-  .tox-control-wrap__status-icon-unknown,
-.tox
-  .tox-control-wrap:not(.tox-control-wrap--status-valid)
-  .tox-control-wrap__status-icon-valid {
+.tox .tox-control-wrap:not(.tox-control-wrap--status-invalid) .tox-control-wrap__status-icon-invalid,
+.tox .tox-control-wrap:not(.tox-control-wrap--status-unknown) .tox-control-wrap__status-icon-unknown,
+.tox .tox-control-wrap:not(.tox-control-wrap--status-valid) .tox-control-wrap__status-icon-valid {
   display: none;
 }
 .tox .tox-control-wrap svg {
@@ -1761,13 +1611,8 @@ body.tox-dialog__disable-scroll {
   cursor: pointer;
 }
 .tox .tox-color-input span::before {
-  background-image: linear-gradient(
-      45deg,
-      rgba(255, 255, 255, 0.25) 25%,
-      transparent 25%
-    ),
-    linear-gradient(-45deg, rgba(255, 255, 255, 0.25) 25%, transparent 25%),
-    linear-gradient(45deg, transparent 75%, rgba(255, 255, 255, 0.25) 75%),
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.25) 25%, transparent 25%),
+    linear-gradient(-45deg, rgba(255, 255, 255, 0.25) 25%, transparent 25%), linear-gradient(45deg, transparent 75%, rgba(255, 255, 255, 0.25) 75%),
     linear-gradient(-45deg, transparent 75%, rgba(255, 255, 255, 0.25) 75%);
   background-position: 0 0, 0 6px, 6px -6px, -6px 0;
   background-size: 12px 12px;
@@ -2156,9 +2001,7 @@ body.tox-dialog__disable-scroll {
   margin: -20px 0 0 -20px;
   top: 200px;
 }
-.tox:not([dir="rtl"])
-  .tox-image-tools__toolbar
-  > .tox-slider:not(:first-of-type) {
+.tox:not([dir="rtl"]) .tox-image-tools__toolbar > .tox-slider:not(:first-of-type) {
   margin-left: 8px;
 }
 .tox:not([dir="rtl"]) .tox-image-tools__toolbar > .tox-button + .tox-slider {
@@ -2250,9 +2093,7 @@ body.tox-dialog__disable-scroll {
   flex-wrap: wrap;
   padding: 0 4px 0 4px;
 }
-.tox.tox-tinymce:not(.tox-tinymce-inline)
-  .tox-editor-header:not(:first-child)
-  .tox-menubar {
+.tox.tox-tinymce:not(.tox-tinymce-inline) .tox-editor-header:not(:first-child) .tox-menubar {
   border-top: 1px solid #ccc;
 }
 .tox .tox-mbtn {
@@ -2737,8 +2578,7 @@ body.tox-dialog__disable-scroll {
 .tox .tox-statusbar__path-item:focus:not(:disabled):not([aria-disabled="true"]),
 .tox .tox-statusbar__path-item:hover:not(:disabled):not([aria-disabled="true"]),
 .tox .tox-statusbar__wordcount:focus:not(:disabled):not([aria-disabled="true"]),
-.tox
-  .tox-statusbar__wordcount:hover:not(:disabled):not([aria-disabled="true"]) {
+.tox .tox-statusbar__wordcount:hover:not(:disabled):not([aria-disabled="true"]) {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -2996,8 +2836,7 @@ body.tox-dialog__disable-scroll {
   transition: height 0.3s ease, opacity 0.2s linear 0.1s;
 }
 .tox .tox-toolbar__overflow--shrinking {
-  transition: opacity 0.3s ease, height 0.2s linear 0.1s,
-    visibility 0s linear 0.3s;
+  transition: opacity 0.3s ease, height 0.2s linear 0.1s, visibility 0s linear 0.3s;
 }
 .tox .tox-menubar + .tox-toolbar,
 .tox .tox-menubar + .tox-toolbar-overlord .tox-toolbar__primary {
@@ -3014,13 +2853,8 @@ body.tox-dialog__disable-scroll {
 .tox .tox-toolbar--no-divider {
   background-image: none;
 }
-.tox-tinymce:not(.tox-tinymce-inline)
-  .tox-editor-header:not(:first-child)
-  .tox-toolbar-overlord:first-child
-  .tox-toolbar__primary,
-.tox-tinymce:not(.tox-tinymce-inline)
-  .tox-editor-header:not(:first-child)
-  .tox-toolbar:first-child {
+.tox-tinymce:not(.tox-tinymce-inline) .tox-editor-header:not(:first-child) .tox-toolbar-overlord:first-child .tox-toolbar__primary,
+.tox-tinymce:not(.tox-tinymce-inline) .tox-editor-header:not(:first-child) .tox-toolbar:first-child {
   border-top: 1px solid #ccc;
 }
 .tox.tox-tinymce-aux .tox-toolbar__overflow {
