--- a/templates/actor/common/actor-equipment-list.html
+++ b/templates/actor/common/actor-equipment-list.html
@@ -1,38 +1,24 @@
 <li class="items-header flexrow">
   <h4 class="item-name">{{localize "PB.Equipment"}}</h4>
   <div class="item-create-button">
-    <a class="item-control item-create" title='{{localize "PB.ItemCreate"}}'>
-      <i class="fas fa-plus"></i
-    ></a>
+    <a class="item-control item-create" title='{{localize "PB.ItemCreate"}}'> <i class="fas fa-plus"></i></a>
   </div>
 </li>
 
 <ol class="item-list">
   {{#*inline "item-row"}}
-  <li
-    class="item flexrow item-type-{{item.type}} {{class}}"
-    data-item-id="{{item._id}}"
-  >
+  <li class="item flexrow item-type-{{item.type}} {{class}}" data-item-id="{{item._id}}">
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
     <h4 class="item-name item-edit rollable">
-      {{item.name}} {{#ifEq item.type 'container'}}
-      ({{item.data.totalContainerSpace}} / {{item.data.capacity}}) {{/ifEq}}
-      {{#ifGt item.data.quantity 1}} ({{item.data.quantity}}) {{/ifGt}}
+      {{item.name}} {{#ifEq item.type 'container'}} ({{item.data.totalContainerSpace}} / {{item.data.capacity}}) {{/ifEq}} {{#ifGt item.data.quantity 1}}
+      ({{item.data.quantity}}) {{/ifGt}}
     </h4>
-    <div class="item-buttons">
-      {{> "systems/pirateborg/templates/actor/common/actor-item-button.html"
-      item=item}}
-    </div>
+    <div class="item-buttons">{{> "systems/pirateborg/templates/actor/common/actor-item-button.html" item=item}}</div>
     <div class="item-controls">
       {{#if item.data.canPlusMinus}}
-      <a class="item-control item-qty-plus" title="Add Quantity"
-        ><i class="fas fa-plus"></i
-      ></a>
-      <a class="item-control item-qty-minus" title="Subtract Quantity"
-        ><i class="fas fa-minus"></i
-      ></a>
-      {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if
-      item.data.equippable}}
+      <a class="item-control item-qty-plus" title="Add Quantity"><i class="fas fa-plus"></i></a>
+      <a class="item-control item-qty-minus" title="Subtract Quantity"><i class="fas fa-minus"></i></a>
+      {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if item.data.equippable}}
       <a
         class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
         title="{{ifPrintElse item.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
@@ -47,18 +33,12 @@
         <i class="fas fa-user-check"></i
       ></a>
       {{/if}} {{/ifNe}}
-      <a class="item-control item-edit" title="Edit Item">
-        <i class="fas fa-edit"></i
-      ></a>
-      <a class="item-control item-delete" title="Delete Item">
-        <i class="fas fa-trash"></i
-      ></a>
+      <a class="item-control item-edit" title="Edit Item"> <i class="fas fa-edit"></i></a>
+      <a class="item-control item-delete" title="Delete Item"> <i class="fas fa-trash"></i></a>
     </div>
   </li>
-  {{/inline}} {{#each data.data.equipment as |item id|}} {{> item-row
-  item=item}} {{#ifEq item.type 'container'}} {{#each item.data.itemsData as
-  |item|}} {{> item-row item=item class="item-container-item"
-  disableCarryAndEquipButton=true}} {{else}}
+  {{/inline}} {{#each data.data.equipment as |item id|}} {{> item-row item=item}} {{#ifEq item.type 'container'}} {{#each item.data.itemsData as |item|}} {{>
+  item-row item=item class="item-container-item" disableCarryAndEquipButton=true}} {{else}}
   <li class="item empty-container" data-item-id="{{item._id}}">
     <div class="rule-text">{{localize 'PB.ContainerEmptyHelpText'}}</div>
   </li>
