--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -2,28 +2,15 @@
   {{!-- Sheet Header --}}
   <header class="sheet-header">
     <div class="header-col1">
-      <img
-        class="profile-img"
-        src="{{actor.img}}"
-        data-edit="img"
-        title="{{actor.name}}"
-      />
+      <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
     </div>
     <div class="header-col2">
       <div class="name-row">
-        <input
-          class="actor-name container-name"
-          name="name"
-          type="text"
-          value="{{actor.name}}"
-          placeholder="{{ localize 'PB.Name' }}"
-        />
+        <input class="actor-name container-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'PB.Name' }}" />
       </div>
       <div class="actor-type">{{actor.type}}</div>
       <div class="holding-row">
-        <span class="stat-label container-label"
-          >{{ localize "PB.ContainerHolding" }}:</span
-        >
+        <span class="stat-label container-label">{{ localize "PB.ContainerHolding" }}:</span>
         <span class="stat-value">{{data.data.containerSpace}}</span>
         /
         <span class="stat-value">{{data.data.capacity.max}}</span>
@@ -36,9 +23,7 @@
     <span class="spacer"></span>
     <a class="item" data-tab="contents">{{ localize "PB.TabContents" }}</a>
     <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
-    <a class="item" data-tab="description"
-      >{{ localize "PB.TabDescription" }}</a
-    >
+    <a class="item" data-tab="description">{{ localize "PB.TabDescription" }}</a>
     <span class="spacer"></span>
   </nav>
 
@@ -46,39 +31,25 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
+      {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
     </div>
 
     {{!-- Details Tab --}}
     <div class="tab" data-group="primary" data-tab="details">
       <div class="form-group">
         <label>{{ localize "PB.ItemPrice" }}:</label>
-        <input
-          type="text"
-          name="data.price"
-          value="{{data.data.price}}"
-          placeholder="2"
-          data-dtype="Number"
-        />
+        <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemCapacity" }}:</label>
-        <input
-          name="data.capacity.max"
-          type="text"
-          value="{{data.data.capacity.max}}"
-          placeholder="10"
-          data-dtype="Number"
-        />
+        <input name="data.capacity.max" type="text" value="{{data.data.capacity.max}}" placeholder="10" data-dtype="Number" />
       </div>
     </div>
 
     {{!-- Contents Tab --}}
     <div class="tab equipment-tab" data-group="primary" data-tab="contents">
       <ol class="items-list equipment-list">
-        {{>
-        "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
+        {{> "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
       </ol>
     </div>
   </section>
