--- a/templates/chat/morale-roll-card.html
+++ b/templates/chat/morale-roll-card.html
@@ -1,9 +1,9 @@
 <form class="roll-card morale-roll-card">
-  <div class="card-title">{{localize 'PB.Morale'}}</div>
+  <div class="card-title">{{localize "PB.Morale"}}</div>
   <div class="morale-roll">
     <div class="outcome-text">{{actor.name}} {{outcomeText}}</div>
     <div class="roll-title">
-      <span>{{localize 'PB.Morale'}}: {{moraleRoll.formula}}</span>
+      <span>{{localize "PB.Morale"}}: {{moraleRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal moraleRoll}}</span>
@@ -11,7 +11,7 @@
     {{#if outcomeRoll}}
     <div class="outcome-roll">
       <div class="roll-title">
-        <span>{{localize 'PB.Outcome'}}: {{outcomeRoll.formula}}</span>
+        <span>{{localize "PB.Outcome"}}: {{outcomeRoll.formula}}</span>
       </div>
       <div class="roll-result">
         <span>{{xtotal outcomeRoll}}</span>
