--- a/templates/chat/party-initiative-roll-card.html
+++ b/templates/chat/party-initiative-roll-card.html
@@ -1,9 +1,9 @@
 <form class="roll-card morale-roll-card">
-  <div class="card-title">{{localize 'PB.PartyInitiative'}}</div>
+  <div class="card-title">{{localize "PB.PartyInitiative"}}</div>
   <div class="initiative-roll">
     <div class="outcome-text">{{outcomeText}}</div>
     <div class="roll-title">
-      <span>{{localize 'PB.PartyInitiative'}}: {{initiativeRoll.formula}}</span>
+      <span>{{localize "PB.PartyInitiative"}}: {{initiativeRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal initiativeRoll}}</span>
