--- a/templates/chat/reaction-roll-card.html
+++ b/templates/chat/reaction-roll-card.html
@@ -1,11 +1,9 @@
 <form class="roll-card reaction-roll-card">
-  <div class="card-title">{{localize 'PB.Reaction'}}</div>
+  <div class="card-title">{{localize "PB.Reaction"}}</div>
   <div class="reaction-roll">
-    <div class="reaction-text">
-      {{actor.name}} {{localize 'PB.Is'}} {{reactionText}}
-    </div>
+    <div class="reaction-text">{{actor.name}} {{localize "PB.Is"}} {{reactionText}}</div>
     <div class="roll-title">
-      <span>{{localize 'PB.Reaction'}}: {{reactionRoll.formula}}</span>
+      <span>{{localize "PB.Reaction"}}: {{reactionRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal reactionRoll}}</span>
