--- a/templates/chat/wield-invokable-card.html
+++ b/templates/chat/wield-invokable-card.html
@@ -1,30 +1,21 @@
 <form class="roll-card wield-power-roll-card">
-  <div class="card-title">{{ title }}</div>
+  <div class="card-title">{{title}}</div>
   <div class="wield-roll">
     <div class="outcome-text">
       <span class="attack-outcome">{{wieldOutcome}}</span>
     </div>
     <div class="roll-title">
-      <span
-        >{{wieldFormula}} {{localize 'PB.Vs'}} {{localize 'PB.DR'}}
-        {{wieldDR}}</span
-      >
+      <span>{{wieldFormula}} {{localize "PB.Vs"}} {{localize "PB.DR"}} {{wieldDR}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal wieldRoll}}</span>
     </div>
   </div>
 
-  {{#if isFailure }}
+  {{#if isFailure}}
   <div class="outcome-action">
-    <button
-      type="button"
-      class="button item-button"
-      data-is-mystical-mishap="true"
-      data-item-id="{{item._id}}"
-      data-actor-id="{{actor._id}}"
-    >
-      {{localize 'PB.InvokableRitualFailureButton'}}
+    <button type="button" class="button item-button" data-is-mystical-mishap="true" data-item-id="{{item._id}}" data-actor-id="{{actor._id}}">
+      {{localize "PB.InvokableRitualFailureButton"}}
     </button>
   </div>
   {{/if}}
