--- a/templates/dialog/rest-dialog.html
+++ b/templates/dialog/rest-dialog.html
@@ -1,18 +1,18 @@
 <form id="rest-form" class="custom-dialog rest-dialog">
   <div class="section">
-    <div class="subtitle">{{localize 'PB.RestDialogLength'}}</div>
+    <div class="subtitle">{{localize "PB.RestDialogLength"}}</div>
     <div>
       <ul>
         <li>
           <label
             ><input name="rest-length" type="radio" value="short" checked />
-            <div>{{localize 'PB.RestDialogLengthShort'}}</div></label
+            <div>{{localize "PB.RestDialogLengthShort"}}</div></label
           >
         </li>
         <li>
           <label
             ><input name="rest-length" type="radio" value="long" />
-            <div>{{localize 'PB.RestDialogLengthLong'}}</div></label
+            <div>{{localize "PB.RestDialogLengthLong"}}</div></label
           >
         </li>
       </ul>
@@ -20,25 +20,25 @@
   </div>
 
   <div class="section">
-    <div class="subtitle">{{localize 'PB.RestDialogFoodAndDrink'}}</div>
+    <div class="subtitle">{{localize "PB.RestDialogFoodAndDrink"}}</div>
     <div>
       <ul>
         <li>
           <label
             ><input name="food-and-drink" type="radio" value="eat" checked />
-            <div>{{localize 'PB.RestDialogEat'}}</div></label
+            <div>{{localize "PB.RestDialogEat"}}</div></label
           >
         </li>
         <li>
           <label
             ><input name="food-and-drink" type="radio" value="donteat" />
-            <div>{{localize 'PB.RestDialogDontEat'}}</div></label
+            <div>{{localize "PB.RestDialogDontEat"}}</div></label
           >
         </li>
         <li>
           <label
             ><input name="food-and-drink" type="radio" value="starve" />
-            <div>{{localize 'PB.RestDialogStarve'}}</div></label
+            <div>{{localize "PB.RestDialogStarve"}}</div></label
           >
         </li>
       </ul>
@@ -46,13 +46,13 @@
   </div>
 
   <div class="section">
-    <div class="subtitle">{{localize 'PB.Infection'}}</div>
+    <div class="subtitle">{{localize "PB.Infection"}}</div>
     <div>
       <ul>
         <li>
           <label
             ><input name="infected" type="checkbox" />
-            <div>{{localize 'PB.RestDialogInfected'}}</div></label
+            <div>{{localize "PB.RestDialogInfected"}}</div></label
           >
         </li>
       </ul>
@@ -60,8 +60,6 @@
   </div>
 
   <div class="button-row">
-    <button type="submit" class="button rest-button" name="rest" value="1">
-      {{localize 'PB.Rest'}}
-    </button>
+    <button type="submit" class="button rest-button" name="rest" value="1">{{localize "PB.Rest"}}</button>
   </div>
 </form>
