--- a/templates/dialog/scvm-dialog.html
+++ b/templates/dialog/scvm-dialog.html
@@ -5,17 +5,13 @@
       {{#each this.classes}}
       <li>
         <label
-          ><input name="{{this.pack}}" type="checkbox" class="class-checkbox"
-          {{#if this.checked }}checked{{/if}} />
+          ><input name="{{this.pack}}" type="checkbox" class="class-checkbox" {{#if this.checked }}checked{{/if}} />
           <div class="class-name">{{this.name}}</div></label
         >
       </li>
       {{/each}}
     </ul>
-    <div>
-      <a class="toggle-none">{{localize "PB.ScvmfactoryToggleNone"}}</a>&nbsp; /
-      &nbsp;<a class="toggle-all">{{localize "PB.ScvmfactoryToggleAll"}}</a>
-    </div>
+    <div><a class="toggle-none">{{localize "PB.ScvmfactoryToggleNone"}}</a>&nbsp; / &nbsp;<a class="toggle-all">{{localize "PB.ScvmfactoryToggleAll"}}</a></div>
   </div>
 
   {{#if forActor}}
@@ -25,11 +21,7 @@
   {{/if}}
 
   <div class="button-row">
-    <button type="submit" class="button cancel-button" name="cancel" value="1">
-      {{localize "PB.Cancel"}}
-    </button>
-    <button type="submit" class="button scvm-button" name="scvm" value="1">
-      {{localize "PB.ScvmfactoryMakeScvm"}}
-    </button>
+    <button type="submit" class="button cancel-button" name="cancel" value="1">{{localize "PB.Cancel"}}</button>
+    <button type="submit" class="button scvm-button" name="scvm" value="1">{{localize "PB.ScvmfactoryMakeScvm"}}</button>
   </div>
 </form>
