--- a/templates/item/weapon-sheet.html
+++ b/templates/item/weapon-sheet.html
@@ -1,20 +1,10 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-  {{!-- Sheet Header --}}
+  {{! Sheet Header }}
   <header class="sheet-header flexrow">
-    <img
-      class="profile-img"
-      src="{{item.img}}"
-      title="{{item.name}}"
-      data-edit="img"
-    />
+    <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img" />
     <div class="header-details">
       <h1 class="item-name">
-        <input
-          name="name"
-          type="text"
-          value="{{item.name}}"
-          placeholder="{{ localize 'PB.ItemName' }}"
-        />
+        <input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'PB.ItemName'}}" />
       </h1>
       <div class="item-subtitle">
         <h4 class="item-type">{{item.type}}</h4>
@@ -22,88 +12,60 @@
     </div>
   </header>
 
-  {{!-- Sheet Tab Navigation --}}
+  {{! Sheet Tab Navigation }}
   <nav class="sheet-tabs tabs" data-group="primary">
     <span class="spacer"></span>
-    <a class="item" data-tab="description"
-      >{{ localize "PB.TabDescription" }}</a
-    >
-    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
+    <a class="item" data-tab="description">{{localize "PB.TabDescription"}}</a>
+    <a class="item" data-tab="details">{{localize "PB.TabDetails"}}</a>
     <span class="spacer"></span>
   </nav>
 
-  {{!-- Sheet Body --}}
+  {{! Sheet Body }}
   <section class="sheet-body">
-    {{!-- Description Tab --}}
+    {{! Description Tab }}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
+      {{editor content=data.data.description target="data.description" button=true owner=owner editable=true}}
     </div>
 
-    {{!-- Details Tab --}}
+    {{! Details Tab }}
     <div class="tab" data-group="primary" data-tab="details">
-      {{!-- Price --}}
+      {{! Price }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemPrice" }}:</label>
-        <input
-          type="text"
-          name="data.price"
-          value="{{data.data.price}}"
-          placeholder="2"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.ItemPrice"}}:</label>
+        <input type="text" name="data.price" value="{{data.data.price}}" placeholder="2" data-dtype="Number" />
       </div>
 
-      {{!-- Carry weight --}}
+      {{! Carry weight }}
       <div class="form-group">
-        <label>{{ localize "PB.CarryWeight" }}:</label>
-        <input
-          type="text"
-          name="data.carryWeight"
-          value="{{data.data.carryWeight}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.CarryWeight"}}:</label>
+        <input type="text" name="data.carryWeight" value="{{data.data.carryWeight}}" placeholder="1" data-dtype="Number" />
       </div>
 
-      {{!-- Container space --}}
+      {{! Container space }}
       <div class="form-group">
-        <label>{{ localize "PB.ContainerSpace" }}:</label>
-        <input
-          type="text"
-          name="data.containerSpace"
-          value="{{data.data.containerSpace}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.ContainerSpace"}}:</label>
+        <input type="text" name="data.containerSpace" value="{{data.data.containerSpace}}" placeholder="1" data-dtype="Number" />
       </div>
 
-      {{!-- Weapon Type --}}
+      {{! Weapon Type }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemWeaponType" }}:</label>
+        <label>{{localize "PB.ItemWeaponType"}}:</label>
         <select name="data.weaponType">
-          {{#select data.data.weaponType}} {{#each config.weaponTypes as |name
-          type|}}
+          {{#select data.data.weaponType}} {{#each config.weaponTypes as |name type|}}
           <option value="{{type}}">{{localize name}}</option>
           {{/each}} {{/select}}
         </select>
       </div>
 
-      {{!-- Damage Die --}}
+      {{! Damage Die }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemDamageDie" }}:</label>
-        <input
-          type="text"
-          name="data.damageDie"
-          value="{{data.data.damageDie}}"
-          placeholder="1d4"
-          data-dtype="String"
-        />
+        <label>{{localize "PB.ItemDamageDie"}}:</label>
+        <input type="text" name="data.damageDie" value="{{data.data.damageDie}}" placeholder="1d4" data-dtype="String" />
       </div>
 
-      {{!-- Handed --}}
+      {{! Handed }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemHanded" }}:</label>
+        <label>{{localize "PB.ItemHanded"}}:</label>
         <select name="data.handed">
           {{#select data.data.handed}} {{#each config.handed as |name value|}}
           <option value="{{value}}">{{localize name}}</option>
@@ -111,61 +73,31 @@
         </select>
       </div>
 
-      {{!-- Uses ammo --}}
+      {{! Uses ammo }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemUsesAmmo" }}:</label>
-        <input
-          type="checkbox"
-          name="data.usesAmmo"
-          {{checked
-          data.data.usesAmmo}}
-          data-dtype="Boolean"
-        />
+        <label>{{localize "PB.ItemUsesAmmo"}}:</label>
+        <input type="checkbox" name="data.usesAmmo" {{checked data.data.usesAmmo}} data-dtype="Boolean" />
       </div>
 
       <div class="form-group">
-        <label>{{ localize "PB.ItemUseAmmoDamage" }}:</label>
-        <input
-          type="checkbox"
-          name="data.useAmmoDamage"
-          {{checked
-          data.data.useAmmoDamage}}
-          data-dtype="Boolean"
-        />
+        <label>{{localize "PB.ItemUseAmmoDamage"}}:</label>
+        <input type="checkbox" name="data.useAmmoDamage" {{checked data.data.useAmmoDamage}} data-dtype="Boolean" />
       </div>
 
       <div class="form-group">
-        <label>{{ localize "PB.ItemCritOn" }}:</label>
-        <input
-          type="text"
-          name="data.critOn"
-          value="{{data.data.critOn}}"
-          placeholder="20"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.ItemCritOn"}}:</label>
+        <input type="text" name="data.critOn" value="{{data.data.critOn}}" placeholder="20" data-dtype="Number" />
       </div>
 
-      {{!-- Crit Extra Damage Die --}}
+      {{! Crit Extra Damage Die }}
       <div class="form-group">
-        <label>{{ localize "PB.ItemCritExtraDamageFormula" }}:</label>
-        <input
-          type="text"
-          name="data.critExtraDamage"
-          value="{{data.data.critExtraDamage}}"
-          placeholder="1d4"
-          data-dtype="String"
-        />
+        <label>{{localize "PB.ItemCritExtraDamageFormula"}}:</label>
+        <input type="text" name="data.critExtraDamage" value="{{data.data.critExtraDamage}}" placeholder="1d4" data-dtype="String" />
       </div>
 
       <div class="form-group">
-        <label>{{ localize "PB.ItemFumbleOn" }}:</label>
-        <input
-          type="text"
-          name="data.fumbleOn"
-          value="{{data.data.fumbleOn}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
+        <label>{{localize "PB.ItemFumbleOn"}}:</label>
+        <input type="text" name="data.fumbleOn" value="{{data.data.fumbleOn}}" placeholder="1" data-dtype="Number" />
       </div>
     </div>
   </section>
